Fixed button overlap

--- a/src/app/form-page/form-page.component.css
+++ b/src/app/form-page/form-page.component.css
@@ -1,4 +1,4 @@
-.textarea-custom{
+.textarea-custom {
   overflow: hidden;
 }
 #logo {
@@ -30,10 +30,21 @@ input[type="number"] {
 
 .row {
   padding: 5% 0% 3%;
+  width: auto;
 }
 
-.col-2 {
+#submit {
   margin-right: 2%;
+}
+
+@media all and (max-width: 480px) {
+  .row {
+    display: inline-block;
+  }
+  #submit {
+    margin: 2%;
+    background-color: #42a948;
+  }
 }
 
 .btn {
@@ -65,6 +76,15 @@ input[type="number"] {
 .btn-custom:focus,
 .btn-custom:hover {
   background: #c95f1e;
+}
+
+.btn-light {
+  background-color: #ececec;
+}
+
+.btn-light:active,
+.btn-light:hover {
+  background-color: #dbdbdb;
 }
 
 #modal-footer {
